4 files modified, 6 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <hello name="{{ name }}"></hello>
-<p>Test Angular</p>
+<h1>{{ title }}</h1>
+<app-access> </app-access>
+
+<app-access> </app-access>
+<app-register></app-register>
