--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
 <hello name="{{ name }}"></hello>
 <h1>{{ title }}</h1>
-<app-access> </app-access>
-
-<app-access> </app-access>
-<app-register></app-register>
+<app-login></app-login>
